--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3"
+	"node-netcat": "^1.4.7"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
