--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^1.0.3"
-	"node-netcat": "^1.4.7"
+    "@iobroker/adapter-core": "^1.0.3",
+    "node-netcat": "^1.4.7"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
