telnet-client hinzugefügt. Abfrage auf telnet-client aufgrund Fehler bei der Datenabfrage umgestellt

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
-    "node-netcat": "^1.4.7"
+    "node-netcat": "^1.4.7",
+    "telnet-client": "^1.0.3"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
