--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.solarviewdatareader",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Get Data from SolarView",
   "author": {
     "name": "Achim Fürhoff",
@@ -19,8 +19,9 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
-    "node-netcat": "^1.4.7",
-    "telnet-client": "^1.0.3"
+    "telnet-client": "^1.0.3",
+	"node-schedule": "^1.3.2",
+	"cron-parser": "^2.12.0"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
