--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
-    "telnet-client": "^1.0.3",
     "node-schedule": "^1.3.2",
-    "cron-parser": "^2.12.0"
+    "cron-parser": "^2.12.0",
+    "node-netcat": "1.4.8"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
