--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
 	"rules": {
 		"indent": [
 			"error",
-			"tab",
+			4,
 			{
 				"SwitchCase": 1
 			}
@@ -18,7 +18,7 @@
 		"prefer-const": "error",
 		"quotes": [
 			"error",
-			"double",
+			"single",
 			{
 				"avoidEscape": true,
 				"allowTemplateLiterals": true
