--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.solarviewdatareader",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Get data from SolarView",
   "author": {
     "name": "Achim Fürhoff",
@@ -19,28 +19,28 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
+    "node-netcat": "1.4.8",
     "node-schedule": "^1.3.2",
-    "cron-parser": "^2.12.0",
-    "node-netcat": "1.4.8"
+    "util": "^0.12.1"
   },
   "devDependencies": {
-    "@iobroker/testing": "^1.2.5",
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
+    "@iobroker/testing": "^1.3.0",
+    "@types/chai": "^4.2.4",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/gulp": "^4.0.6",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^10.14.7",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.6",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^7.0.12",
-    "@types/sinon-chai": "^3.2.2",
-    "axios": "^0.18.0",
+    "@types/sinon": "^7.5.0",
+    "@types/sinon-chai": "^3.2.3",
+    "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.6.0",
     "gulp": "^4.0.2",
-    "mocha": "^6.1.4",
-    "proxyquire": "^2.1.0",
-    "sinon": "^7.3.2",
+    "mocha": "^6.2.2",
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0"
   },
   "main": "main.js",
