--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "util": "^0.12.3"
   },
   "devDependencies": {
+    "@alcalzone/release-script": "^1.9.0",
     "@iobroker/testing": "^2.4.4",
     "@types/chai": "^4.2.16",
     "@types/chai-as-promised": "^7.1.3",
@@ -49,7 +50,8 @@
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:js && npm run test:package",
-    "lint": "eslint"
+    "lint": "eslint",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader/issues"
