--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ admin/i18n/flat.txt
 admin/i18n/*/flat.txt
 admin/i18n/*/translations.json
 
+scripts
+
 iob_npm.done
 package-lock.json
 package-lock.json*
