--- a/package.json
+++ b/package.json
@@ -18,26 +18,24 @@
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0",
-    "node-netcat": "1.4.8",
-    "util": "^0.12.3"
+    "@iobroker/adapter-core": "^2.4.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^1.9.0",
+    "@alcalzone/release-script": "^1.10.0",
     "@iobroker/testing": "^2.4.4",
-    "@types/chai": "^4.2.16",
+    "@types/chai": "^4.2.17",
     "@types/chai-as-promised": "^7.1.3",
     "@types/gulp": "^4.0.8",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.41",
+    "@types/node": "^14.14.44",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^10.0.0",
     "@types/sinon-chai": "^3.2.5",
-    "axios": "^0.21.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.25.0",
     "gulp": "^4.0.2",
+    "hosted-git-info": "^4.0.2",
     "mocha": "^8.3.2",
     "proxyquire": "^2.1.3",
     "sinon": "^10.0.0",
