iobroker testing added

--- a/package.json
+++ b/package.json
@@ -43,12 +43,17 @@
   },
   "main": "main.js",
   "scripts": {
-    "test:js": "mocha --opts test/mocha.custom.opts",
+    "watch:parcel": "parcel admin/src/index.jsx -d admin/build",
+    "build:parcel": "parcel build admin/src/index.jsx -d admin/build",
+    "build": "npm run build:parcel",
+    "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:js && npm run test:package",
-    "lint": "eslint",
+    "aftest": "mocha test/af_test.js --exit",
+    "check": "tsc --noEmit -p tsconfig.check.json",
+    "lint": "eslint --ext .js,.jsx",
     "release": "release-script"
   },
   "bugs": {
