--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ os:
   - linux
   - osx
   - windows
-
 language: node_js
 node_js:
-  - '10'
   - '12'
   - '14'
   - '16'
@@ -25,7 +23,7 @@ before_script:
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
   - npm -v
 script:
-  - npm run test:package
-  - npm run test:unit
-  - export DEBUG=testing:*
-  - npm run test:integration
+  - 'npm run test:package'
+  - 'npm run test:unit'
+  - 'export DEBUG=testing:*'
+  - 'npm run test:integration'
