--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@alcalzone/release-script": "^3.5.2",
     "@alcalzone/release-script-plugin-iobroker": "^3.5.1",
     "@alcalzone/release-script-plugin-license": "^3.5.0",
+    "@iobroker/adapter-dev": "^0.1.0",
     "@iobroker/testing": "^2.5.4",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
@@ -36,7 +37,6 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.32.0",
-    "gulp": "^4.0.2",
     "hosted-git-info": "^4.1.0",
     "mocha": "^9.2.0",
     "proxyquire": "^2.1.3",
@@ -62,7 +62,8 @@
     "aftest": "mocha test/af_test.js --exit",
     "check": "tsc --noEmit -p tsconfig.check.json",
     "lint": "eslint --ext .js,.jsx",
-    "release": "release-script"
+    "release": "release-script",
+    "translate": "translate-adapter"
   },
   "bugs": {
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader/issues"
