--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.1.4"
+    "@iobroker/adapter-core": "^3.1.4",
+    "rimraf": "^5.0.7"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.7.0",
@@ -27,35 +28,42 @@
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
     "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^4.1.3",
+    "@tsconfig/node20": "^20.1.4",
     "@types/chai": "^4.3.16",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.13.0",
     "chai": "^4.4.1",
     "chai-as-promised": "^7.1.2",
-    "eslint": "^8.57.0",
-    "mocha": "^10.4.0"
+    "eslint": "^9.3.0",
+    "mocha": "^10.4.0",
+    "typescript": "^5.4.5"
   },
-  "main": "main.js",
+  "main": "build/main.js",
+  "type": "commonjs",
   "files": [
-    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*).json",
+    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).json",
     "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
-    "lib/",
+    "build/",
     "www/",
     "io-package.json",
-    "LICENSE",
-    "main.js"
+    "LICENSE"
   ],
   "scripts": {
-    "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
+    "prebuild": "rimraf build",
+    "build": "build-adapter ts",
+    "watch": "build-adapter ts --watch",
+    "prebuild:ts": "rimraf build",
+    "build:ts": "build-adapter ts",
+    "watch:ts": "build-adapter ts --watch",
+    "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
     "test:package": "mocha test/package --exit",
     "test:integration": "mocha test/integration --exit",
-    "test": "npm run test:js && npm run test:package",
-    "aftest": "mocha test/af_test.js --exit",
-    "check": "tsc --noEmit -p tsconfig.check.json",
-    "lint": "eslint --ext .js,.jsx .",
-    "release": "release-script",
-    "translate": "translate-adapter"
+    "test": "npm run test:ts && npm run test:package",
+    "check": "tsc --noEmit",
+    "lint": "eslint --ext .ts src/",
+    "translate": "translate-adapter",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader/issues"
