--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,53 @@
+// Root tsconfig to set the settings and power editor support for all TS files
 {
-	"compileOnSave": true,
+	//"compileOnSave": true,
+    // To update the compilation target, install a different version of @tsconfig/node... and reference it here
+    // https://github.com/tsconfig/bases#node-16-tsconfigjson
+    "extends": "@tsconfig/node20/tsconfig.json",
 	"compilerOptions": {
-		// do not compile anything, this file is just to configure type checking
+        // do not compile anything, this file is just to configure type checking
+        // the compilation is configured in tsconfig.build.json
 		"noEmit": true,
 
-		// check JS files
+        // check JS files, but do not compile them => tsconfig.build.json
 		"allowJs": true,
 		"checkJs": true,
-
-		"module": "commonjs",
-		"moduleResolution": "node",
+    	
+		"noEmitOnError": true,
+    	"outDir": "build",
+    	"rootDir": "src",
+		"removeComments": false,
+		
 		// this is necessary for the automatic typing of the adapter config
 		"resolveJsonModule": true,
 
-		// Set this to false if you want to disable the very strict rules (not recommended)
-		"strict": true,
-		// Or enable some of those features for more fine-grained control
-		// "strictNullChecks": true,
-		// "strictPropertyInitialization": true,
-		// "strictBindCallApply": true,
-		"noImplicitAny": false,
-		// "noUnusedLocals": true,
-		// "noUnusedParameters": true,
+        // If you want to disable the stricter type checks (not recommended), uncomment the following line
+        // "strict": false,
+        // And enable some of those features for more fine-grained control
+        // "strictNullChecks": true,
+        // "strictPropertyInitialization": true,
+        // "strictBindCallApply": true,
+        // "noImplicitAny": true,
+        // "noUnusedLocals": true,
+        // "noUnusedParameters": true,
+        // Uncomment this if you want the old behavior of catch variables being `any`
+        // "useUnknownInCatchVariables": false,
 
 		// Consider targetting es2017 or higher if you require the new NodeJS 8+ features
-		"target": "es2015",
-
+		"sourceMap": true,
+    	"inlineSourceMap": false,
+		"types": ["node", "@iobroker/types"]
+		//"types": ["@iobroker/types"]
 	},
 	"include": [
-		"**/*.js",
-		"**/*.d.ts"
+		"src/**/*.ts",
+		"src/lib/**/*.ts",
+		"test/**/*.js"
 	],
 	"exclude": [
+		"build/**",
 		"node_modules/**",
-		"admin/**"
+		"admin/**",
+		"widgets/**"
 	]
 }
