--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	//"compileOnSave": true,
     // To update the compilation target, install a different version of @tsconfig/node... and reference it here
     // https://github.com/tsconfig/bases#node-16-tsconfigjson
-    "extends": "@tsconfig/node20/tsconfig.json",
+    "extends": "@tsconfig/node18/tsconfig.json",
 	"compilerOptions": {
         // do not compile anything, this file is just to configure type checking
         // the compilation is configured in tsconfig.build.json
@@ -14,7 +14,7 @@
 		"checkJs": true,
     	
 		"noEmitOnError": true,
-    	"outDir": "build",
+    	"outDir": "./build/",
     	"rootDir": "src",
 		"removeComments": false,
 		
@@ -37,7 +37,6 @@
 		"sourceMap": true,
     	"inlineSourceMap": false,
 		"types": ["node", "@iobroker/types"]
-		//"types": ["@iobroker/types"]
 	},
 	"include": [
 		"src/**/*.ts",
