--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
+	"eslint.options": {
+		"overrideConfigFile": ".eslintrc.js" // Passe dies an den Namen deiner Konfigurationsdatei an
+	},
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact"
+	],
 	"eslint.enable": true,
 	"json.schemas": [
 		{
