--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.1.4",
-    "rimraf": "^5.0.7"
+    "@iobroker/adapter-core": "^3.1.4"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.7.0",
     "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+    "@eslint/js": "^9.3.0",
     "@iobroker/adapter-dev": "^1.3.0",
     "@iobroker/testing": "^4.1.3",
-    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/node18": "^18.2.4",
     "@types/chai": "^4.3.16",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.6",
@@ -37,6 +37,10 @@
     "chai-as-promised": "^7.1.2",
     "eslint": "^9.3.0",
     "mocha": "^10.4.0",
+    "rimraf": "^5.0.7",
+    "sinon": "^18.0.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "main": "build/main.js",
