--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^10.4.0",
     "rimraf": "^5.0.7",
     "sinon": "^18.0.0",
+    "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
