--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.13.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "chai": "^4.4.1",
     "chai-as-promised": "^7.1.2",
     "eslint": "^8.57.0",
