package.json optimized

--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "check": "tsc --noEmit",
     "lint": "eslint --ext .ts src/",
     "translate": "translate-adapter",
-    "release": "release-script"
+    "release": "release-script",
+    "release-patch": "release-script patch --yes",
+    "release-minor": "release-script minor --yes",
+    "release-major": "release-script major --yes",
   },
   "bugs": {
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader/issues"
