package.json changed

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "release": "release-script",
     "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes",
+    "release-major": "release-script major --yes"
   },
   "bugs": {
     "url": "https://github.com/afuerhoff/ioBroker.solarviewdatareader/issues"
