--- a/package.json
+++ b/package.json
@@ -27,29 +27,27 @@
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
     "@iobroker/adapter-dev": "^1.3.0",
+    "@iobroker/eslint-config": "^1.0.0",
     "@iobroker/testing": "^5.0.0",
     "@tsconfig/node18": "^18.2.4",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^7.1.8",
-    "@types/mocha": "^10.0.9",
-    "@types/node": "^20.16.11",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.17.8",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
-    "eslint": "^8.57.1",
     "mocha": "^10.8.2",
     "rimraf": "^5.0.10",
     "sinon": "^18.0.1",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "main": "build/main.js",
   "type": "commonjs",
   "files": [
-    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).json",
+    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*).json",
     "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
     "build/",
     "www/",
@@ -69,7 +67,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
-    "lint": "eslint --ext .ts src/",
+    "lint": "eslint -c eslint.config.mjs ./src/main.ts",
     "translate": "translate-adapter",
     "release": "release-script",
     "release-patch": "release-script patch --yes",
