--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
     "@iobroker/adapter-dev": "^1.4.0",
-    "@iobroker/eslint-config": "^1.0.0",
+    "@iobroker/eslint-config": "^1.0.1",
     "@iobroker/testing": "^5.0.4",
     "@tsconfig/node18": "^18.2.4",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.17.56",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
     "mocha": "^10.8.2",
@@ -42,6 +42,7 @@
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
     "typescript": "^5.8.3"
   },
   "main": "build/main.js",
