--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
-    "@iobroker/adapter-dev": "^1.4.0",
-    "@iobroker/eslint-config": "^2.1.0",
+    "@iobroker/adapter-dev": "^1.5.0",
+    "@iobroker/eslint-config": "^2.2.0",
     "@iobroker/testing": "^5.1.1",
-    "@tsconfig/node20": "^20.1.6",
+    "@iobroker/types": "^7.0.7",
+    "@tsconfig/node22": "^22.0.2",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.10",
@@ -37,7 +38,7 @@
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
     "mocha": "^10.8.2",
-    "rimraf": "^5.0.10",
+    "rimraf": "^6.0.1",
     "sinon": "^18.0.1",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
